[package]
name = "eof_bot_rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
serde_json = "1.0.91"
env_logger = "0.9.3"
log = "0.4.17"
regex = "1"
daemonize = "0.4.1"
getopts = "0.2"
strsim = "0.10.0"

[workspace]
members = [""]
